--- a/scripts/EDA.Rmd
+++ b/scripts/EDA.Rmd
@@ -15,7 +15,7 @@ output:
 # Load libraries
 library(RCurl)
 library(tidyverse)
-library(magrittr)
+library(magrittr)R
 library(plotly)
 library(imputeTS)
 library(lubridate)
@@ -222,6 +222,65 @@ load_vs_forecast %>%
   ggplot() +
   geom_line(aes(x=time, y=difference)) +
   ylab("Difference between predicted and actual load")
+
+```
+### To discuss
+```{r, include=TRUE}
+
+
+
+
+datain <- long_gen_data %>% group_by(generation_source, year, day, month) %>% summarise(across(c(value), c(max, min)))
+
+datain <- datain %>%
+  mutate(date = make_date(year, month, day))
+head(datain)
+names <- unique(datain$generation_source)
+for(name in names){
+  datain2 <- filter(datain, generation_source == name)
+  print(datain2 %>% ggplot()+geom_line(aes(x = date, y = (value_1 - value_2)/((value_1+value_2)/2) , color = generation_source))+theme(legend.position="bottom") + ggtitle(name)
+)
+}
+
+
+```
+
+```{r, include=TRUE}
+
+
+
+
+datain <- long_gen_data %>% group_by(generation_source, year, day, month) %>% summarise(across(c(value), c(max, min)))
+
+datain <- datain %>%
+  mutate(date = make_date(year, month, day))
+head(datain)
+names <- unique(datain$generation_source)
+for(name in names){
+  datain2 <- filter(datain, generation_source == name)
+  print(datain2 %>% ggplot()+geom_line(aes(x = date, y = value_1, color = "max"))+geom_line(aes(x = date, y = value_2, color = "min"))+theme(legend.position="bottom")+ggtitle(name)
+)
+}
+
+
+```
+```{r, include=TRUE}
+
+
+long_gen_data[is.na(long_gen_data)] <- mean(long_gen_data$value)
+
+
+datain <- long_gen_data %>% group_by(generation_source, year, month) %>% summarise(across(c(value), c(max, min)))
+datain2 <- datain %>%
+  mutate(date = make_date(year, month))
+
+head(datain2)
+names <- unique(datain2$generation_source)
+for(name in names){
+  datain3 <- filter(datain2, generation_source == name)
+  print(datain3 %>% ggplot()+geom_line(aes(x = date, y = value_1, color = "max"))+geom_line(aes(x = date, y = value_2, color = "min"))+theme(legend.position="bottom")+ggtitle(name))
+}
+
 ```
 
 \`\`\`
